compiler/testData/cli/jvm/internalArgDisableLanguageFeature.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-SealedInterfaces

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/internalArgDisableLanguageFeature.kt:1:1: error: the feature "sealed interfaces" is disabled
sealed interface A
^^^^^^
COMPILATION_ERROR
